@@ -1,3 +1,11 @@
+boost1.46 (1.46.1-3)
+
+  * Boost.Build and bjam now ship in the main -dev package (currently
+    libboost1.46-dev).  Packages boost-build and bjam are obsolete and to
+    be removed from the archive.
+
+ -- Steve M. Robbins <smr@debian.org>  Sat, 19 Mar 2011 18:26:39 -0500
+
 boost1.39 (1.39.0-4) unstable; urgency=low
   
   Since only one (the multi-threaded) variant of each library is built,
