@@ -4,13 +4,13 @@ Section: libs
 Priority: optional
 Maintainer: Debian Boost Team <pkg-boost-devel@lists.alioth.debian.org>
 Uploaders: Steve M. Robbins <smr@debian.org>, Domenico Andreoli <cavok@debian.org>
-Build-Depends: debhelper (>= 7), bison, flex, docbook-to-man, help2man, xsltproc, doxygen, zlib1g-dev, libbz2-dev, libicu-dev, python-all-dev, python3-all-dev (>= 3.1), python-support (>= 0.6), mpi-default-dev
+Build-Depends: debhelper (>= 8), bison, flex, docbook-to-man, help2man, xsltproc, doxygen, zlib1g-dev, libbz2-dev, libicu-dev, python-all-dev, python3-all-dev (>= 3.1), python-support (>= 0.6), mpi-default-dev
 Build-Conflicts: libopenmpi-dev (= 1.3.2-2)
 X-Python-Version: >= 2.4
 X-Python3-Version: >= 3.0
 Vcs-Browser: http://svn.debian.org/wsvn/pkg-boost/boost/trunk/
 Vcs-Svn: svn://svn.debian.org/svn/pkg-boost/boost/trunk
-Standards-Version: 3.8.3
+Standards-Version: 3.9.1
 
 Package: libboost1.46-dbg
 Architecture: any
