@@ -4,7 +4,13 @@ boost1.46 (1.46.1-3) unstable; urgency=low
     package.  The latter now conflicts and replaces the old bjam and
     boost-build packages.
 
- -- Steve M. Robbins <smr@debian.org>  Sat, 19 Mar 2011 17:41:33 -0500
+  * control:
+  * compat: Use debhelper compatibility level 8.
+  
+  * control: Set Standards-Version to 3.9.1.  Don't build using _REENTRANT
+    flag.
+
+ -- Steve M. Robbins <smr@debian.org>  Sat, 19 Mar 2011 18:25:49 -0500
 
 boost1.46 (1.46.1-2) unstable; urgency=low
 
